# lsInfer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  readme.md
cmake/: CPM.cmake  cuda.cmake  rocm.cmake
demo/: CMakeLists.txt  main.cpp  main_qwen.cpp
hf_infer/: llama3_infer.py  qwen2_infer.py
lsinfer/include/base/: alloc.h  backend_config.h  base.h  buffer.h  cuda_config.h  tick.h
lsinfer/include/model/: config.h  llama3.h  model.h  qwen2.h
lsinfer/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h
lsinfer/include/sampler/: argmax_sampler.h  sampler.h
lsinfer/include/tensor/: tensor.h
lsinfer/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  buffer.cpp  unicode-data.cpp  unicode.cpp
lsinfer/source/model/: llama3.cpp  model.cpp  qwen2.cpp
lsinfer/source/op/: add.cpp  embedding.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
lsinfer/source/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
lsinfer/source/op/kernels/cpu/: add_kernel.h  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h
lsinfer/source/op/kernels/cuda/: matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rope_kernel.cuh
lsinfer/source/op/kernels/rocm/: add_kernel.cu  argmax_kernel.cu  emb_kernel.cu
lsinfer/source/sampler/: argmax_sampler.cpp
lsinfer/source/tensor/: tensor.cpp
test/: CMakeLists.txt  utils.cu  utils.cuh
test/optimized/: test_allocator.cpp
test/test_op/: test_cu_add.cpp  test_cu_emb.cpp  test_cu_matmul.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_scale.cpp  test_cu_softmax.cpp  test_cu_swiglu.cpp  test_load.cpp
test/test_op/cuda/: test_cu_matmul.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
